[package]
name = "gitpod-ports-backwarder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
futures-lite = "1.12.0"
async-std = {version = "1.10.0", features = ["attributes", "tokio1"]}
regex = "1.5.4"
lazy_static = "1.4.0"
command-group = {version = "1.0.8", features = ["with-tokio"]}
